test/spec_vectors/func/fail/module_60.wat
(module (func $type-break-first-num-vs-num (result i32) (br 0 (i64.const 1)) (br 0 (i32.const 1))))